[package]
name = "spring-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
structopt-derive = "0.4.18"
reqwest = "0.11.11"
tokio = { version = "1.19.2", features = ["full"] }
