[package]
name = "spring-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
structopt-derive = "0.4.18"
reqwest = "0.11.11"
tokio = { version = "1.19.2", features = ["full"] }
regex = "1.6.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
sql-parse = "0.8.0"
