[package]
name = "spring-helper"
version = "1.0.0"
edition = "2021"

[dependencies]
structopt = "0.3.26"
structopt-derive = "0.4.18"
reqwest = { version = "0.11.11", features = ["blocking"] }
regex = "1.6.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
sql-parse = "0.8.0"
postgres = "0.19.3"
convert_case = "0.5.0"
